# gridfields

./: INSTALL  Makefile.am  README  check  configure.ac  setup.py
branches/autotools/: setup.py
branches/autotools/gfserve/: corie.py  corielib.py  gfrun.py  gfserve.py
branches/autotools/gridfield/: algebra.py  optimize.py
branches/autotools/src/: CmdLine.h  Makefile  RTree.h  access.h  accumulate.h  array.cc  arrayreader.cc  arrayreader.h  assignments.h  bind.cc  configure.ac  crossordmap.h  datadump.cc  dataset.cc  grid.h  gridfield.cc  implicit0cells.h  netcdfadaptor.cc  netcdfadaptor.h  output.cc  outputtuples.cc
branches/autotools/src/tests/: Makefile.am  gfscan.cc  testaggregate.cc  testarrayreader.cc  testcross.cc  testdataset.cc  testgrid.cc  testgridfield.cc  testnetcdf.cc  testnetcdfadaptor.cc  testoutput.cc  testtuple.cc  testwrite63.cc
branches/clib/: CmdLine.cpp
branches/clib/src/: bind.cc  fparser.cc  output.cc
branches/clib/tests/: Makefile.am  testarray.cc  testcellarray.cc  testdataset.cc  testdataset.h  testgrid.cc  testnetcdfadaptor.cc  testrestrict.cc  unopt-scalar.cc
branches/tag/gridfieldsclib-0.7/: Makefile.am
clib/: .gitignore  ChangeLog  CmdLine.cpp  INSTALL  Makefile.am  NEWS  README  configure.ac  gridfields-config.in
clib/src/: CmdLine.h  abstractcellarray.h  access.h  aggregate.cc  aggregate.h  aggregations.cc  aggregations.h  apply.cc  apply.h  array.cc  array.h  arrayreader.cc  arrayreader.h  arraywriter.cc  assignments.cc  binarynodemap.h  bind.cc  bind.h  bindconstant.cc  cell.h  cellarray.cc  cellarray.h  constarray.cc  cross.cc  cross.h  crossnodemap.h  datadump.cc  dataset.cc  dataset.h  elcircfile.h  elio.c  elio.h  expr.cc  expr.h  fparser.cc  fparser.hh  grid.cc  grid.h  gridfield.cc  gridfield.h  (+36 more)
clib/tests/: Makefile.am  gfscan.cc  plugin.cc  testarray.cc  testarrayreader.cc.in  testbind.cc  testbind.cc.in  testcellarray.cc  testcross.cc.in  testdataset.cc  testelcirc.cc  testgrid.cc  testjoin.cc  testrepresent.cc  testscan.cc  testsift.cc  testsubapply.cc  transpose.cc
examples/: Triangulation.py  habitatlayer_selfe2netcdf.py  helloworld.py  showselfe.py  simple2D.py  subsetting.py  triangle_demo2try.py  triangle_demo3try.py  trigrid1.txt  xgrid2.txt
examples/broken_examples/: habitatlayer_selfe2netcdf_local.py  selfe2netcdf.py
gfserve/: graph.py  log.py  parameters.py  regression.py  simple_start.sh  start_gfserve.py
gridfield/: Makefile.swig  algebra.py  catalog.py  core.i  core.py  core_wrap.cpp  gfvis.i  log.py  selfe.py
gridfield/graph/: __init__.py
gridfield/vis/: __init__.py  actor.py  scene.py  vis.py
gridfieldsclib-0.7/: README
gridfieldsclib-0.7/src/: array.cc  cellarray.cc  elio.h  implicit0cells.h  netcdfadaptor.h  outputtuples.h  type.cc
gridfieldsclib-0.7/tests/: testarray.h
pygridfields/: setup.py
pygridfields-0.7/examples/: usgs_advanced.py
pygridfields/clib/: elio.dox
pygridfields/gridfield/: algebra.py
src/: CmdLine.cpp  CmdLine.h  Makefile  RTree.h  access.h  aggregate.cc  aggregate.h  aggregations.cc  aggregations.h  apply.cc  apply.h  array.cc  array.h  arrayreader.cc  arrayreader.h  arraywriter.h  assignments.cc  bind.cc  bind.h  bindconstant.cc  bindconstant.h  cell.h  cellarray.cc  cellarray.h  configure.ac  constarray.cc  constarray.h  counted_ptr.h  cross.cc  crossnodemap.h  datadump.cc  datadump.h  dataset.cc  dataset.h  elcircfile.cc  elio.c  expr.cc  expr.h  grid.cc  grid.h  (+33 more)
src/conf/: netcdf.m4
src/experimental/: bind2.cc  catalog.cc  connect.cc  connect.h  copy.cc  corierecipes.h  dataprods.cc  elcirc2netcdf.cc  fileproxy.cc  gridwriter.cc  join.h  loop.cc  myheader.c  nest.cc  nestedgf.h  read63.cc  regrid.cc  regrid.h  selfe2netcdf.cc  simpleoperator.cc  subapply.cc  vtkCORIEReader.cxx
src/experiments/: readtrans.cc
src/scratch/: scanvgrid.cc  tag.cc  tag.h
src/tests/: Makefile.am  test.cc  testaccess.cc  testaggregate.cc  testarray.cc  testarrayreader.cc  testbind.cc  testcellarray.cc  testcross.cc  testgridfield.cc  testmerge.cc  testnetcdf.cc  testrestrict.cc  testsift.cc  testtag.cc  testtuple.cc  time.cc
src/vis/: visualize.cc  visualize.h  vtkGridField.h  vtkXOpenGLOffScreenRenderWindow.h
tags/gridfields-0.4/: setup.py
tags/pygridfields-0.7/: INSTALL  README
tests/: Makefile  Makefile.am  corierestrict.cc  gfapply.cc  gfbindvar.cc  gfrestrict.cc  gfview.cc  nested.cc  plumevol.cc  scalar.cc  scratch.cc  test.h  testaccess.cc  testaggregate.cc  testarray.h  testarrayreader.cc  testbind.cc  testcellarray.cc  testcross.cc  testelcirc.cc  testexpr.cc  testgridfield.cc  testjoin.cc  testmerge.cc  testnetcdf.cc  testoutput.cc  testrestrict.cc  testscan.cc  testsift.cc  testsmallrestrict.cc  testtuple.cc  testvis.cc  transect.cc  transect.h
trunk/: README
trunk/clib/: Makefile.am  NEWS  configure.ac  gridfields.spec  store.gf
trunk/clib/conf/: netcdf.m4
trunk/clib/src/: abstractcellarray.h  access.h  accumulate.cc  accumulate.h  aggregate.cc  aggregate.h  aggregations.cc  aggregations.h  apply.h  array.cc  array.h  arrayreader.cc  arrayreader.h  arraywriter.cc  arraywriter.h  assignments.cc  assignments.h  bind.cc  bindconstant.cc  bindconstant.h  cell.cc  cell.h  cellarray.cc  cellarray.h  constarray.cc  constarray.h  counted_ptr.h  crossnodemap.h  crossordmap.h  datadump.cc  datadump.h  elcircfile.cc  elcircfile.h  elio.c  elio.h  expr.h  fparser.cc  fpconfig.hh  fptypes.hh  grid.cc  (+44 more)
trunk/clib/tests/: Makefile.am  Makefile.in  gfview.cc  testarray.h  testcross.cc  testexpr.cc  testgridfield.cc  testmerge.cc  testnetcdf.cc  testoutput.cc  testoutput.cc.in  testrestrict.cc  testwrite63.cc  transect.cc
trunk/examples/: helloworld.py  simple2D.py
trunk/gfserve/: actor.py  config.py  optimize.py  scene.py  vis.py
trunk/gridfield/: core.i
trunk/src/: CmdLine.cpp  CmdLine.h  RTree.h  array.cc  array.h  cell.h  cellarray.h  constarray.h  cross.cc  cross.h  elcircfile.cc  gridfield.h  gridfieldoperator.h  iterate.h  scaninternal.cc  scanvgrid.cc  stuebe.h  tonetcdf.cc  tuple.cc
wiki/: PageName.wiki  README.wiki
(+214 files in other folders)
